Ajout de AccueilController, fly.toml, et modifications de configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
-spring.application.name=wallet
+# Configuration de la base de donn√©es MySQL
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://switchyard.proxy.rlwy.net:18915/railway}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:wQKXZxAbSSSJkqIGQOnmLHKQwkcfGvmV}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:com.mysql.cj.jdbc.Driver}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/new_schemaSO
-spring.datasource.username=root
-spring.datasource.password=MonNouveauP@ss123!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# Configuration Hibernate
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.MySQLDialect}
 
-logging.level.org.springframework.security=DEBUG
+# Nom de notre application
+spring.application.name=${SPRING_APPLICATION_NAME:wallet}
 
-# Pour Èviter les erreurs de CORS si on teste avec notre app mobile
-spring.mvc.cors.allowed-origins=*
+# CORS si on connecte depuis l'appli mobile
+spring.mvc.cors.allowed-origins=${SPRING_CORS_ALLOWED_ORIGINS:*}
+
+server.port=8080
+server.address=0.0.0.0
+
+
