--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,13 @@ spring.application.name=${SPRING_APPLICATION_NAME:wallet}
 
 # CORS si on connecte depuis l'appli mobile
 spring.mvc.cors.allowed-origins=${SPRING_CORS_ALLOWED_ORIGINS:*}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wallet.appmobile@gmail.com
+spring.mail.password=sowallet@20
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 server.port=8080
 server.address=0.0.0.0
