--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.mvc.cors.allowed-origins=${SPRING_CORS_ALLOWED_ORIGINS:*}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=wallet.appmobile@gmail.com
-spring.mail.password=sowallet@20
+spring.mail.password=${SENDGRID_API_KEY}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
