ajout si lutilisateur oubli son mot de pass

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 
 # Configuration de la base de données MySQL
 
-# Configuration de la base de donnÃ©es MySQL
 
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://switchyard.proxy.rlwy.net:18915/railway}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
@@ -18,12 +17,10 @@ spring.application.name=${SPRING_APPLICATION_NAME:wallet}
 
 # CORS si on connecte depuis l'appli mobile
 spring.mvc.cors.allowed-origins=${SPRING_CORS_ALLOWED_ORIGINS:*}
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=wallet.appmobile@gmail.com
-spring.mail.password=${SENDGRID_API_KEY}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+
+sendgrid.sender.email=wallet.appmobile@gmail.com
+sendgrid.api.key=${SENDGRID_API_KEY}
+logging.level.org.hibernate=DEBUG
 
 
 server.port=8080
